<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UI.HomeScreen">

    <TextView
        android:id="@+id/add_new_image_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="5dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="5dp"
        android:background="@drawable/button_background"
        android:paddingStart="15dp"
        android:paddingTop="5dp"
        android:paddingEnd="15dp"
        android:paddingBottom="5dp"
        android:text="@string/add_new_image_btn_label"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:drawableStartCompat="@android:drawable/ic_input_add" />

    <TextView
        android:id="@+id/history_list_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/add_new_image_btn"
        android:layout_alignParentStart="true"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:background="@android:color/holo_blue_bright"
        android:padding="5dp"
        android:text="@string/history_list_title"
        android:textColor="@color/black"
        android:textSize="24sp" />


    <TextView
        android:id="@+id/no_history_label"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/history_list_title"
        android:gravity="center"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:padding="5dp"
        android:visibility="gone"
        android:text="@string/no_previous_images_available_label"
        android:textColor="@color/black"
        android:textSize="22sp" />


    <GridView
        android:id="@+id/history_grid"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/history_list_title"
        android:gravity="center"
        android:horizontalSpacing="8dp"
        android:numColumns="2"
        android:padding="5dp"
        android:stretchMode="columnWidth"
        android:verticalSpacing="8dp" />

</RelativeLayout>