<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".UI.AddingNewImageScreen">

    <TextView
        android:id="@+id/back_to_home_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:drawablePadding="5dp"
        android:padding="5dp"
        android:text="Back to home"
        android:textColor="@color/purple_700"
        android:textSize="20sp"
        app:drawableStartCompat="?attr/homeAsUpIndicator">

    </TextView>

    <ImageView
        android:id="@+id/delete_image_btn"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_gravity="end"
        android:layout_marginEnd="25dp"
        android:background="@drawable/button_background"
        android:padding="3dp"
        android:src="@android:drawable/ic_delete" />


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="25dp"
        android:background="@drawable/border_background">


        <TextView
            android:id="@+id/take_photo_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:background="@drawable/button_background"
            android:gravity="center"
            android:paddingStart="35dp"
            android:paddingTop="15dp"
            android:paddingEnd="35dp"
            android:paddingBottom="15dp"
            android:text="@string/take_a_photo_btn_label"
            android:textColor="@color/white"
            android:textSize="18sp"
            app:drawableTopCompat="@android:drawable/ic_menu_camera" />

        <RelativeLayout
            android:id="@+id/final_result_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/camera_photo_result"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:adjustViewBounds="true"
                android:cropToPadding="true"
                android:scaleType="fitCenter" />

            <TextView
                android:id="@+id/weather_info"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_marginBottom="12dp"
                android:background="#51000000"
                android:padding="5dp"
                android:textColor="@color/white"
                android:visibility="gone" />
        </RelativeLayout>

    </RelativeLayout>


    <TextView
        android:id="@+id/get_weather_info_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="25dp"
        android:background="@drawable/button_background"
        android:gravity="center"
        android:paddingStart="35dp"
        android:paddingTop="15dp"
        android:paddingEnd="35dp"
        android:paddingBottom="15dp"
        android:text="@string/get_current_weather_info_btn_label"
        android:textColor="@color/teal_700"
        android:textSize="22sp" />

    <TextView
        android:id="@+id/save_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:background="@drawable/button_background"
        android:drawablePadding="5dp"
        android:gravity="center"
        android:paddingStart="35dp"
        android:paddingTop="15dp"
        android:paddingEnd="35dp"
        android:paddingBottom="15dp"
        android:text="@string/save_btn_label"
        android:textColor="@color/teal_700"
        android:textSize="22sp"
        app:drawableStartCompat="@android:drawable/ic_menu_save" />


</LinearLayout>